feat: implementing user setting interface
